WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299661
Clang 21: Fix unnecessary-virtual-specifier and unused-private-field
https://bugs.webkit.org/show_bug.cgi?id=299661
Summary
Clang 21: Fix unnecessary-virtual-specifier and unused-private-field
Ross Kirsling
Reported
2025-09-27 08:52:53 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2025-09-27 08:55:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51437
EWS
Comment 2
2025-09-27 08:58:24 PDT
Committed
300637@main
(69bfa592e8fc): <
https://commits.webkit.org/300637@main
> Reviewed commits have been landed. Closing PR #51437 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-27 08:59:11 PDT
<
rdar://problem/161479135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug