Clang 21: Fix unnecessary-virtual-specifier and unused-private-field https://bugs.webkit.org/show_bug.cgi?id=299661

Unreviewed. Fix two of the new warnings introduced in Clang 21:
1. virtual method '~Foo' is inside a 'final' class and can never be overridden
2. private field 'm_bar' is not used

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferProxy.h:
* Source/WebCore/platform/network/curl/CurlRequest.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedSceneState.h:

Canonical link: https://commits.webkit.org/300637@main