Source/WebCore/platform/network/curl/CurlRequest.h
@@ -58,7 +58,7 @@ public:
         return adoptRef(*new CurlRequest(request, &client, captureMetrics));
     }
 
-    virtual ~CurlRequest();
+    ~CurlRequest();
 
     WEBCORE_EXPORT void invalidateClient();
     WEBCORE_EXPORT void setAuthenticationScheme(ProtectionSpace::AuthenticationScheme);
